--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -3,27 +3,34 @@
       <div class="authBlock">
         <h3>Sign In</h3>
         <div class="formGroup">
-          <input type="text" class="formControl" placeholder="Username" #userName required>
+          <input type="text" class="formControl" placeholder="Email Address" #userName required>
         </div>
         <div class="formGroup">
           <input type="password" class="formControl" placeholder="Password" #userPassword required>
+        </div>
+
+        <div class="forgotPassword">
+          <span routerLink="/forgot-password">Forgot Password?</span>
         </div>
         <!-- Calling SignIn Api from AuthService -->
         <div class="formGroup">
           <input type="button" class="btn btnPrimary" value="Log in" (click)="authService.SignIn(userName.value, userPassword.value)">
         </div>
-        <div class="formGroup">
-          <span class="or"><span class="orInner">Or</span></span>
-        </div>
+        <div class="line"></div>
         <!-- Calling GoogleAuth Api from AuthService -->
         <div class="formGroup">
           <button type="button" class="btn googleBtn" (click)="authService.GoogleAuth()">
             <i class="fab fa-google-plus-g"></i>
-            Log in with Google
+            Login with Google
           </button>
         </div>
-        <div class="forgotPassword">
-          <span routerLink="/forgot-password">Forgot Password?</span>
+
+        <!-- Calling FacebookAuth Api from AuthService -->
+        <div class="formGroup">
+          <button type="button" class="btn facebookBtn" (click)="authService.FacebookAuth()">
+            <i class="fab fa-google-plus-g"></i>
+            Login with Facebook
+          </button>
         </div>
       </div>
       <div class="redirectToLogin">
