--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -22,15 +22,23 @@
         </div>
         <div class="formGroup">
           <input
-            type="button"
-            class="btn btnPrimary"
-            value="Sign Up"
-            (click)="authService.SignUp(userEmail.value, userPwd.value)"
+            type="password"
+            class="formControl"
+            placeholder="Confirm Password"
+            #userCPwd
+            required
           />
         </div>
         <div class="formGroup">
-          <span class="or"><span class="orInner">Or</span></span>
+          <input
+            type="button"
+            class="btn btnPrimary"
+            value="Sign Up"
+            (click)="authService.SignUp(userEmail.value, userCPwd.value, userPwd.value)"
+          />
         </div>
+        
+        <div class="line"></div>
         <!-- Continue with Google -->
         <div class="formGroup">
           <button
@@ -40,6 +48,18 @@
           >
             <i class="fab fa-google-plus-g"></i>
             Continue with Google
+          </button>
+        </div>
+
+        <!-- Continue with Facebook -->
+        <div class="formGroup">
+          <button
+            type="button"
+            class="btn facebookBtn"
+            (click)="authService.FacebookAuth()"
+          >
+            <i class="fab fa-google-plus-g"></i>
+            Continue with Facebook
           </button>
         </div>
       </div>
