--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,192 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
 body{
-    background-color:azure;
+    background-color: #8b8b8b;
 }
 
 
 
 .displayTable{
-    margin-top: 70px;
-    margin-left: 100px;
+    background-image: url(image.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 30px;
+}
+
+.displayTableCell{
+    position: absolute;
+    max-width: 430px;
+    width: 100%;
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+}
+
+h3{
+    font-size: 28px;
+    font-weight: 600;
+    color: #232836;
+    text-align: center;
 }
 
 .formControl{
+    position: relative;
+    height: 50px;
+    width: 100%;
+    padding-left: 5px;
+    font-size: 16px;
+    font-weight: 400;
     margin-top: 20px;
-    padding: 5px;
+    border-radius: 6px;
 }
 
-.btn btnPrimary{
-    background-color: bisque;
+
+.forgotPassword{
+    text-align: center;
+    margin-top: 10px;
 }
+
+.btnPrimary{
+    height: 100%;
+    width: 100%;
+    margin-top: 10px;
+    border: none;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 6px;
+}
+
+.btnPrimary{
+    color: #fff;
+    background-color: #0171d3;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.line{
+    position: relative;
+    height: 1px;
+    width: 100%;
+    margin: 36px 0;
+    background-color: #d4d4d4;
+}
+.line::before{
+    content: 'Or';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #FFF;
+    color: #8b8b8b;
+    padding: 0 15px;
+}
+
+
+.googleBtn{
+    margin-bottom: 10px;
+    border: 1px solid #CACACA;
+    background-color: #0F9D58;
+}
+
+.facebookBtn{
+    margin-bottom: 10px;
+    border: 1px solid #CACACA;
+    background-color: #4267B2;
+}
+
+
+/* * Sidebar */
+.sidebar {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    padding: 48px 0 0;
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
+}
+
+.sidebar-sticky {
+    position: relative;
+    top: 0;
+    height: calc(100vh - 48px);
+    padding-top: 0.5rem;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+@supports ((position: -webkit-sticky) or (position: sticky)) {
+    .sidebar-sticky {
+        position: -webkit-sticky;
+        position: sticky;
+    }
+}
+
+.sidebar .nav-link {
+    font-weight: 500;
+    color: #333;
+}
+
+.sidebar .nav-link .feather {
+    margin-right: 4px;
+    color: #999;
+}
+
+.sidebar-heading {
+    font-size: 0.75rem;
+    text-transform: uppercase;
+}
+
+.nav-link {
+    padding: 1.5rem 1rem;
+    border-bottom: 1px solid #dde0e2;
+    cursor: pointer;
+}
+
+.sidebar .nav-link.active,
+.sidebar a:hover,
+a:not([href]):not([tabindex]):focus,
+a:not([href]):not([tabindex]):hover {
+    color: #e91e63;
+    background: #efefef;
+}
+
+/* * Content */
+[role="main"] {
+    padding-top: 48px;
+}
+
+.dasboard-text {
+    border-left: 1px solid rgb(255, 255, 255, 0.3);
+    color: rgb(255, 255, 255, 0.5);
+    display: inline-block;
+    padding: 0 0 0 14px;
+    font-size: 15px;
+    margin-left: 15px;
+    position: relative;
+    top: -1px;
+}
+
+/* * Navbar */
+.navbar-brand {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+}
+
+.navbar .form-control {
+    padding: 0.75rem 1rem;
+    border-width: 0;
+    border-radius: 0;
+}
+
